[gd_scene load_steps=4 format=3 uid="uid://ccufufec6au3v"]

[ext_resource type="Theme" uid="uid://bbxmydfgv8ikb" path="res://theme.tres" id="1_faklu"]
[ext_resource type="Script" path="res://UI/NetworkMenu/NetworkMenu.gd" id="2_sgilc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fxji1"]

[node name="NetworkMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_faklu")
script = ExtResource("2_sgilc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 409.0
offset_top = 155.0
offset_right = -409.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Remote Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.568627, 0.568627, 0.568627, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
text = "IP: "
vertical_alignment = 1

[node name="IPValue" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("1_faklu")
theme_override_colors/font_color = Color(0.568627, 0.568627, 0.568627, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_fxji1")
text = "searching..."
alignment = 2
editable = false
selecting_enabled = false
flat = true
select_all_on_focus = true

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Host"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Join"

[node name="AddressField" type="LineEdit" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.619608, 0.576471, 1)
theme_override_colors/font_placeholder_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 34
text = "localhost"
placeholder_text = "Enter address to join here ...  "
alignment = 1
select_all_on_focus = true

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 18
text = "Wrong address"
horizontal_alignment = 2

[node name="CorrectLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.372549, 0.866667, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 18
text = "Valid address"
horizontal_alignment = 2

[node name="Space2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Press escape or B to go back"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/AddressField" to="." method="_on_address_field_focus_exited"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/AddressField" to="." method="_on_address_field_gui_input"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/AddressField" to="." method="_on_line_edit_text_submitted"]
